Bug#22828 _my_b_read() ignores return values for my_seek() calls - Because my_seek actually is capable of returning an error code we should   exploit that in the best possible way. - There might be kernel errors or other errors we can't predict and capturing   the return value of all system calls gives us better understanding of   possible errors.

mysys/mf_iocache.c:
  - Added check on return value for my_seek
  - Added comments
mysys/my_chsize.c:
  - Added check on return value for my_seek
  - Added comments
mysys/my_lock.c:
  - Added check on return value for my_seek
  - Added comments
mysys/my_seek.c:
  - Added comments